[project]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI microservice containerized with Docker"
authors = [
  { name = "Desmond Amandi", email = "desmond.amandi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "requests>=2.28.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "httpx>=0.24.0",
  "ruff",  # for linting
  "mypy",  # for type checking
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
